--- a/code(1).html
+++ b/code(1).html
@@ -1109,7 +1109,7 @@
         // .textLetter text h2
         let indexText = 0;
         let textLetter = document.querySelector('.textLetter h2');
-        const textLetterH2 = "Gửi mấy chị đẹp!";
+        const textLetterH2 = "Gửi má Lan!";
         let timoutTextLetter;
 
         function textCharLetter() {
@@ -1137,7 +1137,8 @@
         // chữ của thư bạn muốn gửi
         let indexTextContent = 0;
         let textLetterContent = document.querySelector('.contentLetter');
-        const textLetterP = "Nhân ngày 20 - 10, chúc mấy chế luôn luôn xinh đẹp, tươi trẻ và thành công để có thêm nhiều chàng trai đeo bám như lửa bám xăng, như răng bám lợi, như trời bám mây, như cây bám đất, như tất bám bàn chân. Đặc biệt nhận được nhiều quà, nhiều hoa, nhiều lời khen, nhiều lời chúc của phái nam trong ngày hôm nay. Chúc mấy chị gặp nhiều may mắn hơn, hạnh phúc hơn, nhiều niềm vui, nhiều điều tuyệt diệu hơn.";
+        
+        const textLetterP = "Nhân ngày 20 - 10, chúc má luôn luôn xinh đẹp, tươi trẻ và thành công để có thêm nhiều chàng trai đeo bám như lửa bám xăng, như răng bám lợi, như trời bám mây, như cây bám đất, như tất bám bàn chân. Đặc biệt nhận được nhiều quà, nhiều hoa, nhiều lời khen, nhiều lời chúc của phái nam trong ngày hôm nay. Chúc má gặp nhiều may mắn hơn, hạnh phúc hơn, nhiều niềm vui, nhiều điều tuyệt diệu hơn (ví dụ như sinh viên xuất sắc).";
         let timoutTextLetterContent;
         function textCharLetterContent() {
             if (indexTextContent < textLetterP.length) {
